oops had to fix alignemt with a fixed object
idk this fix was kinda hackey and fast but it worked and i didnt have to waste 2 hours thinking about it so

--- a/css/index.css
+++ b/css/index.css
@@ -204,6 +204,41 @@ p {
     font-size: 1.5rem;
   }
 }
+.invisble {
+  visibility: hidden;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #F6F6F6;
+  opacity: 0.8;
+  color: #454A59;
+  padding: 0 0 1% 0;
+}
+.invisble div {
+  width: 100%;
+  margin: 1%;
+}
+.invisble div h1 {
+  font-size: 4rem;
+}
+.invisble nav {
+  width: 100%;
+}
+.invisble nav a {
+  text-decoration: none;
+  color: #454A59;
+  font-size: 2rem;
+  margin: 0 1% 0 1%;
+}
+@media (max-width: 500px) {
+  .invisble div h1 {
+    font-size: 3.5rem;
+  }
+  .invisble nav a {
+    font-size: 1.5rem;
+  }
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
